# ovos-tts-plugin-supertonic

./: README.md  pyproject.toml
ovos_tts_plugin_supertonic/: __init__.py
